--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "10.16.1"
+  },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
