--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "md5": "^2.2.1",
     "mongoose": "^5.7.11",
     "mongoose-encryption": "^2.0.2",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
     "request": "^2.88.0"
